src/main/kotlin/com/team1/mvp_test/common/error/CategoryErrorMessage.kt
package com.team1.mvp_test.common.error

enum class CategoryErrorMessage(val message: String) {
    NOT_EXIST("존재하지 않는 카테고리입니다."),
    ALREADY_EXIST("이미 존재하는 카테고리입니다.")
}